Update style to work on desktop. Fix the horizontal scroll issue.

--- a/views/css/home.css
+++ b/views/css/home.css
@@ -22,6 +22,7 @@
 #workoutList{
     display: flex;
     flex-direction: column;
+    align-items: center;
     width: 100%;
 }
 
@@ -29,6 +30,7 @@
     margin: 15px 0;
     padding: 15px 0;
     width: 100%;
+    max-width: 750px;
 }
 
 #homeLogout{
