--- a/views/css/newWorkout.css
+++ b/views/css/newWorkout.css
@@ -36,4 +36,5 @@
 #newWorkoutFinish{
     margin-top: 35px;
     width: 100%;
+    max-width: 550px;
 }
