--- a/views/css/workoutMenu.css
+++ b/views/css/workoutMenu.css
@@ -11,6 +11,7 @@
 
 .workoutMenuButtons{
     width: 100%;
+    max-width: 550px;
     margin-top: 35px;
 }
 
@@ -40,4 +41,5 @@
 
 #resumeWorkoutContainer button{
     font-size: 18px;
+    max-width: 550px;
 }
