--- a/views/index.css
+++ b/views/index.css
@@ -31,8 +31,8 @@ body{
     justify-content: center;
     align-items: center;
     min-height: calc(100vh - 65px);
-    width: 100vw;
-    padding: 25px 25px 25px 25px;
+    width: 100%;
+    padding: 25px;
 }
 
 .logo{
